--- a/pdf/templates/html/pdf_view.html
+++ b/pdf/templates/html/pdf_view.html
@@ -9,17 +9,17 @@
     </p>
   </object>
   {% if allow_download or source_url != "" %}
-  <ul>
+  
     {% if allow_download %}
-    <li class="pdf-download-button">
-      <a href="{{ url }}" download>{% trans "Download the PDF" %}</a>
-    </li>
+  
+      <a href="{{ url }}" target="_blank" download>{% trans "Download the PDF" %}</a>
+  <br>
     {% endif %}
     {% if source_url != "" %}
-    <li class="pdf-download-button">
-      <a href="{{ source_url }}" download>{% if source_text == "" %} {% trans "Download the source document" %} {% else %}{{ source_text }}{% endif %}</a>
-    </li>
+    
+      <a href="{{ source_url }}" target="_blank" download>{% if source_text == "" %} {% trans "Download the source document" %} {% else %}{{ source_text }}{% endif %}</a>
+    <br>
     {% endif %}
-  </ul>
+  
   {% endif %}
 </div>
